Added link to GitHub repository

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <footer>
       This project was coded by Cara Ward and is open sourced on
-      <a href="#" target="_blank">GitHub</a>
+      <a href="https://github.com/Cara-lyn/World-Clock" target="_blank"
+        >GitHub</a
+      >
     </footer>
     <script src="javascript/index.js"></script>
   </body>
