Added base of html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,22 @@
     <title>World Clock</title>
   </head>
   <body>
+    <div class="container">
+      <h1>World Clocks</h1>
+      <select>
+        <option value="Choose City..."></option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Paris</option>
+      </select>
+      <div class="city">
+        <h2>Los Angeles</h2>
+      </div>
+      <div class="date">11th January 2025</div>
+      <div class="time">13:39:18 PM</div>
+    </div>
     <footer>
-      This project was coded by Cara Ward and is open sourced on
+      This project was coded by Cara Ward 🐸 and is open sourced on
       <a href="https://github.com/Cara-lyn/World-Clock" target="_blank"
         >GitHub</a
       >
