Added style with css

--- a/index.html
+++ b/index.html
@@ -10,16 +10,25 @@
     <div class="container">
       <h1>World Clocks</h1>
       <select>
-        <option value="Choose City..."></option>
+        <option value="">Choose City...</option>
         <option value="">London</option>
         <option value="">New York</option>
         <option value="">Paris</option>
       </select>
       <div class="city">
-        <h2>Los Angeles</h2>
+        <div>
+          <h2>Los Angeles 🇺🇸</h2>
+          <div class="date">12th January 2025</div>
+        </div>
+        <div class="time">1:48:15 <small> AM </small></div>
       </div>
-      <div class="date">11th January 2025</div>
-      <div class="time">13:39:18 PM</div>
+      <div class="city">
+        <div>
+          <h2>Paris 🇫🇷</h2>
+          <div class="date">12th January 2025</div>
+        </div>
+        <div class="time">1:48:15 <small> AM </small></div>
+      </div>
     </div>
     <footer>
       This project was coded by Cara Ward 🐸 and is open sourced on
