--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <option value="">Choose City...</option>
         <option value="">London</option>
         <option value="">New York</option>
-        <option value="">Paris</option>
+        <option value="">Tokyo</option>
       </select>
       <div class="city">
         <div>
