--- a/index.html
+++ b/index.html
@@ -4,34 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.37/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock</title>
   </head>
   <body>
     <div class="container">
       <h1>World Clocks</h1>
-      <select>
-        <option value="">Choose City...</option>
-        <option value="">London</option>
-        <option value="">New York</option>
-        <option value="">Tokyo</option>
+
+      <select id="city">
+        <option value="">Select a city..</option>
+        <option value="current">My current location</option>
+        <option value="Europe/London">London</option>
+        <option value="America/New_York">New York</option>
+        <option value="Pacific/Auckland">Auckland</option>
       </select>
-      <div class="city">
-        <div>
-          <h2>Los Angeles 🇺🇸</h2>
-          <div class="date">12th January 2025</div>
+
+      <div id="cities">
+        <div class="city" id="los-angeles">
+          <div>
+            <h2>Los Angeles</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time">1:48:15 <small> AM </small></div>
-      </div>
-      <div class="city">
-        <div>
-          <h2>Paris 🇫🇷</h2>
-          <div class="date">12th January 2025</div>
+        <div class="city" id="paris">
+          <div>
+            <h2>Paris</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time">1:48:15 <small> AM </small></div>
       </div>
     </div>
     <footer>
-      This project was coded by Cara Ward 🐸 and is open sourced on
+      This project was coded by <strong>Cara Ward</strong> 🐸 and is open
+      sourced on
       <a href="https://github.com/Cara-lyn/World-Clock" target="_blank"
         >GitHub</a
       >
